; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/lpr/lpr/extr_lpr.c_lmktemp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/lpr/lpr/extr_lpr.c_lmktemp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.printer = type { i8* }

@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"%s/%sA%03d%s\00", align 1
@local_host = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.printer*, i8*, i32, i32)* @lmktemp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @lmktemp(%struct.printer* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.printer*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.printer* %0, %struct.printer** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = call i8* @malloc(i32 %10)
  store i8* %11, i8** %9, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = call i32 @errx(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %4
  %16 = load i8*, i8** %9, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load %struct.printer*, %struct.printer** %5, align 8
  %19 = getelementptr inbounds %struct.printer, %struct.printer* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @local_host, align 4
  %24 = call i32 @snprintf(i8* %16, i32 %17, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %20, i8* %21, i32 %22, i32 %23)
  %25 = load i8*, i8** %9, align 8
  ret i8* %25
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
